--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,12 +1,12 @@
 /* The background picture design*/
 
 .background {
-
     position: relative;
     width: 100%;
     height: 100%;
     background-size: 1920px 400px;
     border: 2px solid rgb(104, 103, 103);
+    border-radius: 10px 10px 10px 10px;
 
 }
 
@@ -14,9 +14,9 @@
 
 /* Reise ziele Logo adjustment*/
 .topic {
-
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    position: relative;
+    font-family: 'Poppins', sans-serif;
+    font-weight:    bold;
+    position: sticky;
     z-index: 1;
     display: grid;
     margin-left: 20%;
@@ -28,17 +28,25 @@
 /* The navbar */
 /* Position the navbar container inside the image */
 .container {
-    position: relative;
+    position: sticky;
     margin: 32px auto;
     margin-top: -30px;
     width: auto;
 }
 
 .topnav {
+    position: sticky;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     overflow: overlay;
     background-color: #333;
     margin-left: 20%;
     margin-right: 20%;
+    border-radius: 20px 20px 20px 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    
 }
 
 
