Stylesheet KOmmentar geändert

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -12,7 +12,7 @@
 
 
 
-/* Reise ziele Logo adjustment*/
+/* Urlaubsplaner h1 design*/
 .topic {
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
