--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,11 +1,15 @@
 /* The background picture design*/
 
+body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .background {
     position: relative;
     width: 100%;
-    height: 100%;
     background-size: 1920px 400px;
-    border: 2px solid rgb(104, 103, 103);
     border-radius: 10px 10px 10px 10px;
 
 }
@@ -113,8 +117,6 @@ body {
 .article-card {
     background: white;
     border-radius: 20px;
-    transition: 1s;
-    perspective: 1000px;
 
 
 }
@@ -122,7 +124,6 @@ body {
 .article-card:hover {
     box-shadow: 0 4px 20px 0 rgba(34, 68, 123, 0.2);
     cursor: pointer;
-    transform: rotateY(180deg);
 
 }
 
@@ -170,6 +171,29 @@ body {
 
 }
 
+/* Article card design slider */
+.slidecontainer {
+    width: 100%;
+    margin-top: 10px;
+
+}
+
+/* The slider itself */
+.slider {
+    width: 100%;
+    height: auto;
+}
+
+.prio {
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-weight: bolder;
+    color: #22447b;
+    display: block;
+    text-decoration: none;
+
+}
 
 
 /* the footer design for our Website */
