--- a/public/css/zielesheet.css
+++ b/public/css/zielesheet.css
@@ -1,11 +1,17 @@
 /* The background picture design*/
 
+body {
+    width: 100%;
+
+    margin: 0;
+    padding: 0;
+}
+
 .background {
     position: relative;
     width: 100%;
     height: 100%;
     background-size: 1920px 400px;
-    border: 2px solid rgb(104, 103, 103);
     border-radius: 10px 10px 10px 10px;
 
 }
