--- a/public/css/famsheet.css
+++ b/public/css/famsheet.css
@@ -228,3 +228,10 @@ button{
     height: auto;
     border-radius: 20px 20px 0 0;
 }
+
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+  }
+
