--- a/public/css/zielesheet.css
+++ b/public/css/zielesheet.css
@@ -32,6 +32,7 @@
     margin: 32px auto;
     margin-top: -30px;
     width: auto;
+    
 }
 
 .topnav {
@@ -67,3 +68,429 @@ li {
     float: left;
     list-style-type: none;
 }
+
+
+
+
+/* Fatih Abi "style in ziele html 
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .container {
+    padding: 2px 16px;
+  }
+*/
+
+  /*-Button-*/
+
+  
+
+/* Styling */
+
+#addFamilymember-dialog{
+    background-color: #333;
+    box-shadow: inset 0px 0px 10px black, 2px 2px 4px rgba(255, 255, 255, 0.1), 8px 8px 16px rgba(255,255,255,0.1);
+    border: 5px solid silver;
+}
+
+#addFamilymember-dialog .dialog-schliessen-button{
+    color: rgba(255,255,255, 0.6);
+}
+
+#addFamilymember-dialog form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#addFamilymember-dialog h3{
+    margin: 0;
+    color: white;
+    text-align: center;
+    font-size: max(2.5vw, 1.1em);
+    text-shadow: 0px 0px 4px black;
+}
+
+#addFamilymember-dialog input{
+      width: 100%;
+      margin: 7px;
+      border-radius: 6px;
+      box-sizing: border-box;
+      font-family: inherit;
+      vertical-align: middle;
+}
+
+#addFamilymember-dialog .eingabefeld {
+    padding: 14px 16px;
+    font-size: 17px;
+    line-height: 16px;
+    background: rgb(240, 240, 240);
+    border: 2px solid silver;
+    color: #1c1e21;
+    height: 50px;
+    box-shadow: inset 0px 0px 4px #222;
+
+}
+
+#addFamilymember-dialog .eingabefeld:focus-visible{
+    outline: none;
+    border: 2px solid #3a342c;
+}
+
+#addFamilymember-dialog input[type=submit]{
+    padding: 0 16px;
+    background-color: #1877f2;
+    border: none;
+    font-size: 25px;
+    color: white;
+    line-height: 48px;
+    font-weight: bold;
+    cursor: pointer;
+    background-image: linear-gradient(#d3cdc5,#3a342c);
+    text-decoration: none;
+    text-shadow: 1px 1px 5px black;
+    box-shadow: inset 0px 0px 10px black;
+    border-radius: 10%/50%;
+    width: 50%;
+    display: inline-block;
+}
+
+/*
+#addFamilymember-dialog input[type=file]{
+    padding: 0 16px;
+    background-color: #1877f2;
+    border: none;
+    font-size: 25px;
+    color: white;
+    line-height: 48px;
+    font-weight: bold;
+    cursor: pointer;
+    background-image: linear-gradient(#d3cdc5,#3a342c);
+    text-decoration: none;
+    text-shadow: 1px 1px 5px black;
+    box-shadow: inset 0px 0px 10px black;
+    border-radius: 10%/50%;
+    width: 50%;
+    display: inline-block;
+}
+*/
+
+#addFamilymember-dialog input[type=submit]:hover{
+    box-shadow: inset 0px 0px 10px black, 0px 0px 15px #d3cdc5;
+}
+
+.h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+  }
+
+.eingabefeld{
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+}
+
+.addFamilymember-dialog-daten{
+    font-family: 'Poppins', sans-serif;
+    
+}
+
+#display-image{
+    width: 380px;
+    height: 225px;
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+  }
+
+/* Article cards design */
+
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
+body {
+    font-family: 'PT Sans', sans-serif;
+    font-size: 100%;
+    font-size: 16px;
+    line-height: 1.5;
+    background: #F0F4FB;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+}
+
+.site-container {
+    margin: 32px auto;
+    max-width: calc(100%-80px);
+
+
+}
+
+
+.article-container {
+    
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
+    gap: 2rem;
+}
+
+.article-image {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+
+}
+
+.article-image img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 20px 20px 0 0;
+}
+
+.article-card {
+    background: white;
+    border-radius: 20px;
+    transition: 0.3s;
+}
+
+.article-card:hover {
+    box-shadow: 0 4px 20px 0 rgba(34, 68, 123, 0.2);
+    cursor: pointer;
+}
+
+.article-content {
+    padding: 2rem;
+    padding-bottom: 5rem;
+}
+
+
+
+.article-content .card-category {
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-weight: 600;
+    color: #6b82a7;
+    display: block;
+    text-decoration: none;
+}
+
+.article-content .card-title {
+    color: #22447b;
+}
+
+.article-content .card-excerpt {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: #6b82a7;
+    margin: 0;
+
+}
+
+@media screen and (min-width: 768px) {
+    .site-container {
+        max-width: 608px;
+    }
+
+    .article-card {
+        display: grid;
+        grid-template-rows: 220px 1fr;
+    }
+
+    @media screen and (min-width: 1280px) {
+        .site-container {
+            max-width: 1156px;
+        }
+    }
+
+}
+
+
+
+/* the footer design for our Website */
+.footer-basic {
+    text-align: center;
+    justify-content: end;
+}
+
+/* -- */
+
+
+.h2 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+  }
+
+button{
+    font-family: 'Poppins', sans-serif;
+    justify-content: space-around;
+    margin-top: 500px;
+    border-radius: 20px 20px 20px 20px;
+    float: left;
+    height: 30px;
+    width: 90px;
+    margin: 1px;
+    background-color: #333;
+    color: white;
+    font-weight: bold;
+    gap: 10px;
+}
+
+.fullclick li {
+    list-style: none;
+    margin: 1em 0;
+    padding: 20px 10px;
+    background: #2b2b2b;
+    position: relative;
+  }
+  .fullclick a.main {
+    color: #85baff;
+    text-align: right;
+    display: block;
+    z-index: 1;
+  }
+  .fullclick li a.main::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: ' ';
+  }
+
+.addFamilymember{
+    font-family: 'Poppins', sans-serif;
+   text-decoration: none;
+   color: black;
+   max-width: 100%;
+    height: auto;
+    border-radius: 20px 20px 0 0;
+}
+
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+  }
+
+
+button[type=submit]{
+    padding: 0 16px;
+    background-color: #1877f2;
+    border: none;
+    font-size: 25px;
+    color: white;
+    line-height: 48px;
+    font-weight: bold;
+    cursor: pointer;
+    background-image: linear-gradient(#d3cdc5,#3a342c);
+    text-decoration: none;
+    text-shadow: 1px 1px 5px black;
+    box-shadow: inset 0px 0px 10px black;
+    border-radius: 10%/50%;
+    width: 50%;
+    height: auto;
+    display: inline-block;
+}
+
+/* SLIDER */
+.slidecontainer {
+    width: 80%; /* Width of the outside container */
+    padding: 1px;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: #ffffff;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #ffffff;
+    cursor: pointer;
+  }
+
+  #teuer{
+      font-family:'Poppins', sans-serif;
+      font-size: 10px;
+      color: white;
+      padding: 1px;
+      
+  }
+
+
+  /* Fatih Abi */
+  .card   {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: auto;
+    border-radius: 20px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
+    gap: 2rem;
+    
+  }
+
+  #card image{
+   
+    
+  }
+  
+  .containerA  {
+    padding: 2px 16px;
+    width: auto;
+    margin: 32px auto;
+    max-width: calc(100%-80px);
+    max-width: 100%;
+    height: auto;
+    border-radius: 20px 20px 0 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
+
+  
+  }
+
+  #container image{
+    
+
+   
+  }
+
+  .test image{
+    
+    
+  }
+
+  #test image{
+    
+  }
+
+
+  
