--- a/public/css/zielesheet.css
+++ b/public/css/zielesheet.css
@@ -1,17 +1,11 @@
 /* The background picture design*/
 
-body {
-    width: 100%;
-
-    margin: 0;
-    padding: 0;
-}
-
 .background {
     position: relative;
     width: 100%;
     height: 100%;
     background-size: 1920px 400px;
+    border: 2px solid rgb(104, 103, 103);
     border-radius: 10px 10px 10px 10px;
 
 }
@@ -76,7 +70,6 @@ li {
 }
 
 
-<<<<<<< HEAD
 
 
 /* Fatih Abi "style in ziele html 
@@ -501,76 +494,3 @@ button[type=submit]{
 
 
   
-=======
-/* voting System */
-
-
-.vote {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    outline: none;
-}
-
-.article-basic {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.contain {
-    border: 3px solid black;
-    padding: 20px;
-    width: 350px;
-    text-align: center;
-    border-radius: 4px;
-}
-
-h2 {
-    padding: 20px 0;
-    font-size: 30px;
-}
-
-img {
-    position: relative;
-    height: 100%;
-    padding-bottom: 10px;
-
-}
-
-.voting {
-    position: relative;
-    border: 3px solid black;
-    border-radius: 4px;
-    padding: 5px;
-    display: flex;
-    justify-content: center;
-}
-
-input {
-    width: 50px;
-    border: none;
-    background: none;
-    color: #919191;
-    font-size: 30px;
-    margin: 0 10px;
-}
-
-button {
-    color: #111;
-    background: none;
-    border: none;
-    font-size: 30px;
-    padding: 0 15px;
-    margin: 10px 0;
-    margin-left: 20px;
-    cursor: pointer;
-}
-
-button:active {
-    color: #004eff;
-    transform: scale(1.2);
-}
->>>>>>> 1cfb99c41adda4c52c9fac89fa3af852c201f1a0
