--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,16 +1,13 @@
 /* The background picture design*/
 
-body {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
 .background {
     position: relative;
     width: 100%;
+    height: 100%;
     background-size: 1920px 400px;
+    border: 2px solid rgb(104, 103, 103);
     border-radius: 10px 10px 10px 10px;
+    margin-top: -12%;
 }
 
 
@@ -49,12 +46,21 @@ body {
     position: sticky;
     z-index: 1;
     display: grid;
-    margin-left: 20%;
-    margin-right: 60%;
+    margin-right: 40%;
+    margin-left: 40%;
     margin-bottom: -3%;
+    margin-top: 10%;
+    padding: 15px;
+    right: 80%;
+    border-radius: 20px;
+    color: white;
+    font-style: italic;
+    justify-content: center;
+    backdrop-filter: blur(10px);
 }
 
 #famBtn {
+    font-family: 'Poppins', sans-serif;
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 0.1em;
@@ -68,6 +74,7 @@ body {
 }
 
 #famBtn:hover {
+    font-family: 'Poppins', sans-serif;
     background-color: #22447b;
     color: white;
 }
@@ -76,6 +83,7 @@ body {
 /* Login Window to know Who is on the Website */
 
 .modal {
+    font-family: 'Poppins', sans-serif;
     display: none;
     position: fixed;
     z-index: 1;
@@ -84,20 +92,22 @@ body {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-    background-color: #fefefe;
+    font-family: 'Poppins', sans-serif;
+    background-color: #333;
+    box-shadow: inset 0px 0px 10px black, 2px 2px 4px rgba(255, 255, 255, 0.1), 8px 8px 16px rgba(255, 255, 255, 0.1);
     margin: 15% auto;
     padding: 50px;
-    border: 3px solid #888;
+    border: 5px solid silver;
     border-radius: 15px 15px 15px 15px;
     width: 50%;
 }
 
 .page {
+    font-family: 'Poppins', sans-serif;
     margin-left: 200px;
 }
 
@@ -105,6 +115,7 @@ body {
 /* The Close Button */
 
 .close {
+    font-family: 'Poppins', sans-serif;
     color: #aaa;
     float: right;
     font-size: 28px;
@@ -122,35 +133,45 @@ body {
 }
 
 #submitBtn {
-    font-size: 15px;
-    letter-spacing: 0.1em;
-    font-weight: bolder;
-    color: #22447b;
-    border-radius: 5px;
-    background-color: white;
-    border: 1px solid grey;
+    background-color: #1877f2;
+    border: none;
+    font-size: 25px;
+    color: white;
+    line-height: 48px;
+    font-weight: bold;
+    cursor: pointer;
+    background-image: linear-gradient(#d3cdc5, #3a342c);
+    text-decoration: none;
+    text-shadow: 1px 1px 5px black;
+    box-shadow: inset 0px 0px 10px black;
+    border-radius: 10%/50%;
+    width: 50%;
+    display: inline-block;
 }
 
 #submitBtn:hover {
-    background-color: #22447b;
-    color: white;
+    box-shadow: inset 0px 0px 10px black, 0px 0px 15px #d3cdc5;
 }
 
 .chooseText {
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
     letter-spacing: 0.1em;
     font-weight: bolder;
-    color: #22447b;
+    color: #ffffff;
+    border: black;
 }
 
 #chooseOption {
     font: 30px;
+    font-family: 'Poppins', sans-serif;
 }
 
 #chooseDrop {
+    font-family: 'Poppins', sans-serif;
     min-width: 100px;
     box-shadow: #333;
-    padding: 10px 10px;
+    padding: 5px 10px;
     border-radius: 10px 10px 10px 10px;
 }
 
